--- a/04-home-field-advantage/wirteup.Rmd
+++ b/04-home-field-advantage/wirteup.Rmd
@@ -25,7 +25,7 @@ library(ggplot2)
 apo <- fread("https://raw.githubusercontent.com/thomasgstewart/data-science-5620-fall-2021/master/deliverables/assets/all-possible-world-series-outcomes.csv")
 ```
 
-***Question 1: Compute analytically the probability that the Braves win the world series when the sequence of game locations is {NYC, NYC, ATL, ATL, ATL, NYC, NYC}. Calculate the probability with and without home field advantage when PB = 0.55. What is the difference in probabilities?***
+***Question 1: Compute analytically the probability that the Braves win the world series when the sequence of game locations is {NYC, NYC, ATL, ATL, ATL, NYC, NYC}. (The code below computes the probability for the alternative sequence of game locations. Note: The code uses data.table syntax, which may be new to you. This is intentional, as a gentle way to introduce data.table.) Calculate the probability with and without home field advantage when PB = 0.55. What is the difference in probabilities?***
 
 
 To answer the first question,we need to define a sequence of game locations. based on the question, Brave will have game in {NYC, NYC, ATL, ATL, ATL, NYC, NYC}. We use 0 to represent NYC and 1 to represent ATL。
@@ -140,7 +140,7 @@ simulation.game.mean-simulation.game.adv.mean
 
 ```
 
-***Question3: What is the absolute and relative error for your simulation in the previous question?***
+***Question 3: What is the absolute and relative error for your simulation in the previous question?***
 
 
 The definition of absolute error is : Absolute error = |p̂−p|
@@ -170,13 +170,15 @@ rel_error_simulation.game.adv
 ```
 We can find the relative error between simulation winning with home advantage and analytic winning with home advantage
 ```{r}
-rel_error_simulation.game.adv <- abs(simulation.game.adv.mean - p.home.adv.win)/simulation.game.mean
+rel_error_simulation.game.adv <- abs(simulation.game.adv.mean - p.home.adv.win)/simulation.game.adv.mean
 rel_error_simulation.game.adv 
 
 ```
 
-***Question four Does the difference in probabilities (with vs without home field advantage) depend on PB?***
-To answer the question, the first thing is to define PB. it is clear that Pb can be any number between 0 to 1. pb in 0 to 0.5 will be a opposite mirror affect with pb in 0.5 to 1. However we have to exclude pb equals 1, because if pb equals 1, probbability of home advantage win will over 1. Thus, we want to find all possible pb from 0.5 to 9 with 0.001 break. Here are 50 observations.
+We prefer to use relative error here.
+
+***Question 4: Does the difference in probabilities (with vs without home field advantage) depend on PB?***
+To answer the question, the first thing is to define Pb. it is clear that Pb can be any number between 0 to 1. pb in 0 to 0.5 will be a opposite mirror affect with pb in 0.5 to 1. However we have to exclude pb equals 1, because if pb equals 1, probability of home advantage win will over 1. Thus, we want to find all possible pb from 0.5 to 9 with 0.001 break. Here are 50 observations.
 ```{r}
 #Setup the probability
 pb<- seq(0.5,0.9,0.01)
@@ -202,16 +204,16 @@ Now we are able to find all observations in each pb. The following expression ar
 
 ```{r}
 
-for (p in seq(pb)) {
+for (x in seq(pb)) {
   advantage_multiplier <- 1.1
-  pbh <- pb[p] * advantage_multiplier
-  pba <- 1 - (1 - pb[p]) * advantage_multiplier
+  pbh <- pb[x] * advantage_multiplier
+  pba <- 1 - (1 - pb[x]) * advantage_multiplier
 
   # Calculate the probability of winning without home advantage
-  p.win [p] <- 1 - pbinom(3, 7, pb[p])
+  p.win [x] <- 1 - pbinom(3, 7, pb[x])
 
   # Calculate the probability of winning with home advantage
-  apo[, p := NA_real_] # Initialize new column in apo to store prob
+  apo[, x := NA_real_] # Initialize new column in apo to store prob
   for(i in 1:nrow(apo)){
     prob_game <- rep(1, 7)
     for(j in 1:7){
@@ -222,12 +224,12 @@ for (p in seq(pb)) {
         , TRUE ~ 1
       )
     }
-  apo[i, p := prod(prob_game)] # Data.table syntax
+  apo[i, x := prod(prob_game)] # Data.table syntax
   }
-  p.home.adv.win[p] <- as.numeric(apo[, sum(p), overall_outcome][1,2])
+  p.home.adv.win[x] <- as.numeric(apo[, sum(x), overall_outcome][1,2])
 
   # Calculate the difference
-  difference[p] <- p.win [p] - p.home.adv.win[p]
+  difference[x] <- p.win [x] - p.home.adv.win[x]
 }
 
 ```
@@ -260,15 +262,15 @@ p.win  <- rep(NA,length(pb))
 difference<- rep(NA,length(pb))
 
 # Calculate the probability of winning without home advantage
-for (p in seq(field.advantage)) {
-  advantage_multiplier <- field.advantage[p]
+for (x in seq(field.advantage)) {
+  advantage_multiplier <- field.advantage[x]
   pbh <- 0.55 * advantage_multiplier
   pba <- 1 - (1 - 0.55) * advantage_multiplier
 
-  p.win [p] <- 1 - pbinom(3, 7, 0.55)
+  p.win [x] <- 1 - pbinom(3, 7, 0.55)
 
   # Calculate the probability of each possible outcome
-  apo[, p := NA_real_] # Initialize new column in apo to store prob
+  apo[, x := NA_real_] # Initialize new column in apo to store prob
   for(i in 1:nrow(apo)){
     prob_game <- rep(1, 7)
     for(j in 1:7){
@@ -279,14 +281,13 @@ for (p in seq(field.advantage)) {
         , TRUE ~ 1
       )
     }
-  apo[i, p := prod(prob_game)] # Data.table syntax
+  apo[i, x := prod(prob_game)] # Data.table syntax
   }
-  p.home.adv.win[p] <- as.numeric(apo[, sum(p), overall_outcome][1,2])
+  p.home.adv.win[x] <- as.numeric(apo[, sum(x), overall_outcome][1,2])
   
 # Calculate the difference
-  difference[p] <- p.win [p] - p.home.adv.win[p]
+  difference[x] <- p.win [x] - p.home.adv.win[x]
 }
-
 
 data<-data.frame(field.advantage,p.home.adv.win,p.win,difference)
 data
