--- a/03-discrete-probability-calculations/writeup.Rmd
+++ b/03-discrete-probability-calculations/writeup.Rmd
@@ -1,7 +1,7 @@
 、---
 title: "writeup"
 author: "Zhengqi Tian"
-date: "9/22/2021"
+date: "9/27/2021"
 output: html_document
 ---
 
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ***Question 1: What is the probability that the Braves win the World Series given that Pb= 0.55***
-<p>&emsp; To answer the question, we need to consider the definition of the win opportunity. Braves needs to win at least 4 times in 7 games, or most 3 loses in 7 games. As we know the Pb and Py, we will able to have the following expressions </p>
+<p>&emsp; To answer the question, we need to consider the definition of the win opportunity. Braves needs to win at least 4 times in 7 games, or most 3 loses in 7 games. Thus,we can conclude that the win situation here is Braves has 0, 1, 2, or 3 lose in the serie. As we know the Pb and Py, we will be able to have the following expressions </p>
 ```{r}
 Pb<- 0.55
 Py<- 1-Pb
@@ -24,19 +24,19 @@ Brave_Win_Prob<-
   dnbinom(2,4,Pb)+
   dnbinom(3,4,Pb)
 ```
-<p>&emsp; Here, we are able to calculate the probability of a win, which is </P>
+<p>&emsp; Here, with the idea above, we are able to calculate the probability of a win, which is </P>
 
 ```{r}
 Brave_Win_Prob
 ```
 
 ***Question 2: What is the probability that the Braves win the World Series given that Pb= x***
-<p>&emsp; While we do not have a clear Pb here, we assume the probability of winning the world series is something from 0.5 to 1.0. Before we start a simulation, the first thing is to set a data set for Pb's probability results. 
+<p>&emsp; While we do not have a clear Pb here, we assume the probability of winning the world series is something from 0.5 to 1.0.we set the break here as 0.01, such as 0.50,0.51,0.52, 0.53. Thus, Before we start a simulation, the first thing is to set a data set for Pb's probability results. 
 ```{r}
 Pbseries <- seq(0.5,1, 0.01)
 B_win_Prob <- rep(NA,length(Pbseries))
 ```
-<p>&emsp; Now, as we use dnbinom function previous to have a win probability, we can leverage the expression to complete our simulation probability results.
+<p>&emsp; Now, as we have conlcued the idea of win situiation, we try to find the win prorbability with different Pb win. Thus, we can leverage the expression to complete our simulation probability results.
 ```{r}
 for(i in 1:length(Pbseries)){
   B_win_Prob[i]<-
@@ -46,14 +46,14 @@ for(i in 1:length(Pbseries)){
     dnbinom(3,4,Pbseries[i])
 }
 ```
-<p>&emsp;Here is the simulation data set for the probability of Brave winning the wolrd series</p>
+<p>&emsp;Here is the simulation data set for the probability of Brave winning the wolrd series. In the following table it includes each pb and its related finally win probability. </p>
 ```{r}
 Pbseries
 B_win_Prob
 data<-data.frame(Pbseries,B_win_Prob)
 data
 ```
-<p>&emsp;Now, we are able to interpret the relationship between Pb and the probability of the Braves winning a head to head matchup.
+<p>&emsp;Thanks for ggplot to visualize the  data frame here. Now, we are able to interpret the relationship between Pb and the probability of the Braves winning a head to head match up. We can find that the higher probability of the Braves winning a head to head matchup come with a higer P(Braves) win World Series. When P(Braves) win World Series approaches to 1, probability of the Braves winning a head to head matchup close to 1.
 ```{r}
 require(ggplot2)
 graph_question2<-ggplot(data,aes(x=Pbseries,y=B_win_Prob))+geom_point()
@@ -67,7 +67,7 @@ graph_question2+labs(
 <p>&emsp; Based on the graph, we conclude that the higher the Pb, the higher probability of the Braves winning a head to head matchup games.</p>
 
 ***Question 3: Suppose one could change the World Series to be best-of-9 or some other best-of-X series. What is the shortest series length so that P(Braves win World Series|PB=.55)≥0.8***
-<p>&emsp; As we know that the Pb needs to be 0.55, we want to observe the outcome as the game series length change. In fact, we want the total length be a odd number, so that one team is able to win. we assume the game around could up to 9999999. When the probability is equal to or more than 0.8, we find it as the shortest series length and probability for the shortest series.</p>
+<p>&emsp; As we know that the Pb needs to be 0.55, we want to observe the outcome as the game series length change. In fact, we want the total length be a odd number, so that one team is able to win. To find the shortest path, we will trying to run multiple time to find the probability of the Braves winning a head to head matchup. We assume the game around could up to 9999999. When the probability is equal to or more than 0.8, we find it as the shortest series length and probability for the shortest series.</p>
 
 ```{r}
 series_length <- seq(1, 9999999, 2)
@@ -86,8 +86,8 @@ shortest
 
 <p>&emsp; Thus, We could find that the shortest series length so that P(Braves win World Series|PB=.55)≥0.8 will be 71, and the probability of win here is 0.8017017
 
-***Question 4:What is the shortest series length so that P(Braves win World Series|Pb=x)≥0.8? This will be a figure (see below) with PB on the x-axis and series length is the y-axis.***
-<p>&emsp;Now were are able to find the required the shortest series length so that P(Braves win World Series|PB=.55)≥0.8. To draw to graph, we will also need the data frame for different Pb value. </p>
+***Question 4: What is the shortest series length so that P(Braves win World Series|Pb=x)≥0.8? This will be a figure (see below) with PB on the x-axis and series length is the y-axis.***
+<p>&emsp;Now we are able to find the required the shortest series length so that P(Braves win World Series|PB=.55)≥0.8. To draw to graph, we will also need the data frame for different Pb value. </p>
 
 <p>&emsp;The first thing here is to defined the variables we look for. First is the uncertain Pb and the another the shortest length based on each Pb. Thus, we will be able to have the following code.</p>
 ```{r}
@@ -127,25 +127,25 @@ graph_question4+labs(
 <p>&emsp; In the graph, when Pb increase, the shortest series length is close to 1.When Pb is bigger than 0.8, the shortest series length is 1.</p>
 
 ***Calculate P(PB=0.55|Braves win World Series in 7 games) under the assumption that either PB=0.55 or PB=0.45. Explain your solution.***
-<p>&emsp; In the graph, P(PB=0.55|Braves win World Series in 7 games) =P(Braves win World Series in 7 games|PB=0.55) * P(PB=0.55) ÷ P(Braves win World Series in 7 games).</p>
+<p>&emsp; To find the solution here, we need to use the idea of conditional probability and marginal probability in Bayes probability. P(PB=0.55|Braves win World Series in 7 games) =P(Braves win World Series in 7 games|PB=0.55) * P(PB=0.55) ÷ P(Braves win World Series in 7 games). With the idea, the next step is to calclualte each part one by one. </p>
 
-<p>&emsp; we are able to use dnbinom() calculate P(Braves win World Series in 7 games) and P(Braves win World Series in 7 games|PB=0.55):
+<p>&emsp; First, we are able to use dnbinom() calculate P(Braves win World Series in 7 games) and P(Braves win World Series in 7 games|PB=0.55). </p>
+
+<p>&emsp; To find P(Braves win World Series in 7 games), we need consider two extreme situations. First is the probability the Braves lost 3 times at the beginning and win 4 time, second is the probability the Braves directly win 4 times and lose 3 time. Either probability has same chance to happen. Prob_Braves_win_in_games will be</p>
+
 ```{r}
 prob_Braves_win_in_games<-(dnbinom(3,4,0.45)+dnbinom(3,4,0.55))/2
-prob_Braves_win_in_games_Pb<-dnbinom(3,4,0.55)
-```
-<p>&emsp; P(Braves win World Series in 7 games) will be</p>
-
-```{r}
 prob_Braves_win_in_games
 ```
 
-<p>&emsp; P(Braves win World Series in 7 games|PB=0.55) will be</p>
+<p>&emsp; P(Braves win World Series in 7 games|PB=0.55) is a conditional margin, which we has solved in the first question. It will be</p>
 ```{r}
+
+prob_Braves_win_in_games_Pb<-dnbinom(3,4,0.55)
 prob_Braves_win_in_games_Pb
 
 ```
-<p>&emsp; ThusP(PB=0.55|Braves win World Series in 7 games) will be P(Braves win World Series in 7 games|PB=0.55) * P(PB=0.55) ÷ P(Braves win World Series in 7 games). P(PB=0.55) = 0.5</p>
+<p>&emsp; ThusP(PB=0.55|Braves win World Series in 7 games) will be P(Braves win World Series in 7 games|PB=0.55) * P(PB=0.55) ÷ P(Braves win World Series in 7 games). Here, P(PB=0.55) = 0.5</p> Finlly, we could find that P(PB=0.55|Braves win World Series in 7 games) will equals
 
 ```{r}
 prob_Braves_win_in_games_Pb*0.5/prob_Braves_win_in_games
